kubernetes/pods/gravitee/overlays/lyfted-prod/statefulset-es.yaml
# https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: elasticsearch-logging-v1
  namespace: lyfted-prod
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: elasticsearch-logging
        resources:
          limits:
            cpu: "2"
            memory: "2048Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
  volumeClaimTemplates:
  - metadata:
      name: es-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 50Gi
---
# Headless service
# https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/#pod-identity
# https://kubernetes.io/docs/concepts/services-networking/service/#headless-services
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-logging
  namespace: lyfted-prod
