kubernetes/pods/gravitee/overlays/lyfted-prod/statefulset-mongo.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: lyfted-prod
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: lyfted-prod
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: mongodb
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        volumeMounts:
        - name: data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 50Gi
