kubernetes/pods/gravitee/overlays/lyfted-prod/deployment-gateway.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gravitee-gateway
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: gravitee-gateway
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gravitee-gateway
  annotations:
    # Use the classic nginx load balancer with the classic ELB
    # kubernetes.io/ingress.class: "nginx"
    # Setup Let's Encrypt Certificates
    # kubernetes.io/tls-acme: "true"

    # Kong Ingress
    kubernetes.io/ingress.class: kong-prod-k8sbot
    certmanager.k8s.io/cluster-issuer: kong-prod
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
    configuration.konghq.com: gravitee-gateway-ingress-cert-manager
spec:
  tls:
  - hosts:
    - gateway.lyfted.co
    secretName: gravitee-gateway
  rules:
  - host: gateway.lyfted.co
    http:
      paths:
      - path: /
        backend:
          serviceName: gravitee-gateway
          servicePort: 8082
