kubernetes/pods/gravitee/overlays/lyfted-prod/deployment-management-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gravitee-management-api
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: gravitee-management-api
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gravitee-management-api
spec:
  tls:
  - hosts:
    - management-api.lyfted.co
    secretName: gravitee-management-api
  rules:
  - host: management-api.lyfted.co
    http:
      paths:
      - path: /
        backend:
          serviceName: gravitee-management-api
          servicePort: 8083
